--- a/_config.yml
+++ b/_config.yml
@@ -57,9 +57,9 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : &twitter
+  username               : "shnhrtkyk"
 facebook:
-  username               : takayuki.shinohara
+  username               : "takayuki.shinohara"
   app_id                 :
   publisher              :
 og_image                 :  # Open Graph/Twitter default site image
