--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "https://www.facebook.com/takayuki.shinohara"
+  facebook         : "takayuki.shinohara"
   foursquare       :
   github           : "shnhrtkyk"
   google_plus      :
