--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/takayuki-shinohara-6b2223104/"
+  linkedin         : "takayuki-shinohara-6b2223104/"
   orcid            : "https://orcid.org/0000-0003-1792-3058"
   pinterest        :
   soundcloud       :
